core/crates/omegon/src/tui/snapshots/omegon__tui__snapshot_tests__snapshot_unified_footer_console.snap
---
source: crates/omegon/src/tui/snapshot_tests.rs
assertion_line: 323
expression: render_to_string(&terminal)
---
  engine                              ╭ inference ───────────────────────────────╮╭ tools ─────────────────────────────╮
  provider ⚡  Ollama (Local)          │           ╷──╷╌╌╌╌╷┆┆┆╷····╷·············││▸ ▫ recall       220ms≋≋≋≋≋≋≋≋≋≋≋≋≋≋│
  model   qwen3                       │███████████│══│≈≈≈≈│┆┆┆│····│·············││✗ ⊕ search       8.1s ≋≋≋≋≋≋≋≋≋≋≋≋≋·│
  auth    ○ api key                   │◌ conv  ✉ sys  ◈ mem  ⚒ tools  ◔ think    ││  ⌘ sh           1.2s ≋≋≋≋≋≋≋≋≋≋≋≋≋·│
  persona ⚙ Systems Engineer          ├─ project ⌗2440  ⠊⠉⠉⠑⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠒⠒⠤⢄││                                    │
  context Maniple 68% / 262k          ├─ working ⌗8  ⠊⠉⠉⠑⠒⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤││                                    │
  path    ~/workspace/black-…/omegon  └─ episodes ⌗45  ⠊⠉⠉⠑⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤││                                    │
  mode    Victory · ◎ High · ◆ native │                                          ││                                    │
  session T·8 · ⚙ 23 · ↻ 2            │                                          ││                                    │
  version v0.15.4-rc.17 → v0.15.4     │                                          ││                                    │
                                      │                                          ││  3/3 active                        │
                                      ╰──────────────────────────────────────────╯╰────────────────────────────────────╯
